--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,24 @@
 @import url(https://fonts.googleapis.com/css2?family=Share+Tech&display=swap);
 
-* {
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Share Tech;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  font-family: Share Tech;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+.App {
+  width: 90%;
+  max-width: 700px;
+  margin: 2em auto;
 }
 
 .HotSwapLogo {
@@ -41,29 +53,41 @@ nav {
   padding-left: 20px;
 }
 
-.modal-area {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 2.5em 1.5em 1.5em 1.5em;
-  background-color: #6b30b8;
-  box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.1);
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-}
-
 .modal-cover {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10;
-  transform: translateZ(0);
-  background-color: rgba(0, 0, 0, 0.8);
-}
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    transform: translateZ(0);
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  .modal-area {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 2.5em 1.5em 1.5em 1.5em;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+  
+  @media screen and (min-width: 500px) {
+    /* Center the Modal! */
+    .modal-area {
+      left: 50%;
+      top: 50%;
+      height: auto;
+      transform: translate(-50%, -50%);
+      max-width: 30em;
+      max-height: calc(100% - 1em);
+    }
+  }
 
 ._modal-close {
   position: absolute;
