--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,21 @@ body {
   
 }
 
+.contentColumn
+{
+  margin-top: 2em;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  justify-self: center;
+}
+
+.uploadfrmt {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+
 .loginform {
     margin-left: 2em;
 }
@@ -237,6 +252,10 @@ a {
     "a b";
     border-radius: 25px;
     
+}
+
+.contentColumn {
+  position: relative;
 }
 
 .nav--dashboard{
