--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,6 @@ body {
 .HotSwapLogo {
   max-width: 100%;
   max-height:100%;
-  
 }
 
 .contentColumn
@@ -201,9 +200,10 @@ nav {
   background-color: rgb(25, 160, 25);
   margin: .5em;
   width: 10%;
-  position:absolute;
   top:0;
   right:0;
+  position: absolute;
+  
 }
 
 .formFormat {
@@ -232,10 +232,6 @@ a {
   border-bottom: 0px;
 }
 
-.addItem {
-  margin: 1em;
-  position: relative;
-}
 .wrapper{
     margin-top: 2em;
 		margin-bottom: 10%;
@@ -255,7 +251,37 @@ a {
 }
 
 .contentColumn {
-  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+.prodImg {
+  width: 100px;
+  height: 100px;
+}
+
+.product {
+  border-radius: 1px;
+  width: 300px;
+  height: 300px;
+  display: flex;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+.singleProduct {
+  margin: 3px;
+  border: 2px solid black;
+}
+
+.storeGrid {
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .nav--dashboard{
