--- a/src/style.css
+++ b/src/style.css
@@ -31,8 +31,11 @@ body {
   margin-top: 2em;
   margin-left: auto;
   margin-right: auto;
-  position: relative;
+  position: relative; 
   justify-self: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
 .uploadfrmt {
@@ -40,6 +43,11 @@ body {
   margin-top: 10px;
 }
 
+.fix {
+  box-sizing: border-box;
+  max-width: 100%;
+  max-height: 100%;
+}
 
 .loginform {
     margin-left: 2em;
@@ -248,12 +256,6 @@ a {
     "a b";
     border-radius: 25px;
     
-}
-
-.contentColumn {
-  width: 100%;
-  height: 100%;
-  margin: 0;
 }
 
 .prodImg {
