--- a/src/style.css
+++ b/src/style.css
@@ -299,3 +299,9 @@ img {
   border-radius: 22px;
   background-color:#6b30b8;
 }
+
+.errorParagraph {
+  color: red;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
