--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
 @import url(https://fonts.googleapis.com/css2?family=Share+Tech&display=swap);
 
+html {
+  height: 100vh;
+}
 body {
   margin: 0;
   padding: 0;
@@ -7,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  min-height: 100vh;
 }
 
 *,
@@ -36,6 +40,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  padding: 0 10px;
 }
 
 .uploadfrmt {
@@ -255,7 +260,7 @@ a {
     grid-template-areas:
     "a b";
     border-radius: 25px;
-    
+    padding: 10px;
 }
 
 .prodImg {
@@ -304,4 +309,17 @@ img {
   color: red;
   font-weight: bold;
   font-size: 1.2rem;
+}
+
+.upload {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  padding: 5px;
+}
+
+input {
+  margin-bottom: 10px;
 }
