Update UI for traded item

--- a/src/style.css
+++ b/src/style.css
@@ -499,3 +499,28 @@ section.make_trade {
   display: flex;
 }
 
+.traded_banner {
+  background-color: red;
+  color: white;
+  text-align:center;
+}
+
+.traded_to_photo {
+  padding-bottom: 20px;
+}
+
+.ship_to_container {
+  padding: 20px;
+}
+
+.ship_to_btn_div {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.ship_item_btn {
+  background-color: rgb(25, 160, 25);
+  color: white;
+}
+
